Trello 510: contest id shall not be mandatory in get API
